# qm

./: .gitignore  AUTHORS  CITATION.bib  CMakeLists.txt  README.md
src/gui/: about.cpp  about.h  component_interface.h  component_operator.cpp  component_operator.h  component_properties.cpp  component_properties.h  component_states.cpp  component_states.h  components.cpp  components.h  components_plugin.cpp  components_plugin.h  components_table.cpp  components_table.h  globals.cpp  globals.h  helpers.h  main.cpp  qm_gui.cpp  qm_gui.h  recent.h  rename.cpp  rename.h  resources.cpp  resources.h  settings.cpp  settings.h  types.h  workspace.cpp  workspace.h
src/lib/: math_algos.h  math_concepts.h  math_conts.h  qm_algos.h
src/plugins/: CMakeLists.txt  example.cpp  example.h
src/test/: grover.cpp  plot_grover.gpl  tst1.cpp
src/unittest/: CMakeLists.txt  adder.cpp  cnot.cpp  cunitary.cpp  hadamard.cpp
tests/: adder.xml  adder2.xml  cnot.xml
